# TinaIDE

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_EN.md  REFACTORING.md  TOOLCHAIN_GUIDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts  version.properties
.github/workflows/: build-android-debug.yml  deleteoldrus.yml  dev-build.yml  ktfmt-check.yml  main_apk_build.yml
.pi/skills/: learn  review-skill
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
core/apk-builder/: build.gradle.kts
core/cmake/: build.gradle.kts
core/common/: build.gradle.kts
core/compile/: build.gradle.kts
core/config/: build.gradle.kts
core/crash/: build.gradle.kts
core/database/: build.gradle.kts
core/debug/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/editor-lsp/: build.gradle.kts
core/editor-view/: build.gradle.kts
core/git/: build.gradle.kts  consumer-rules.pro
core/i18n/: build.gradle.kts
core/linux-distro/: build.gradle.kts
core/logging/: build.gradle.kts
core/lsp/: build.gradle.kts
core/model/: build.gradle.kts
core/ndk/: build.gradle.kts
core/network/: build.gradle.kts
core/plugin/: build.gradle.kts
core/project/: build.gradle.kts
core/proot/: build.gradle.kts
core/search/: build.gradle.kts
core/security/: build.gradle.kts
core/storage/: build.gradle.kts  consumer-rules.pro
core/text-engine/: build.gradle.kts
core/text-engine/src/main/cpp/: CMakeLists.txt
core/tree-sitter/: build.gradle.kts
docker/mobileide-pkg/: Dockerfile  README.md  build-common.sh  build-pkg.ps1  build.sh  clean.ps1  package-for-assets-win.sh  package-for-assets.sh  package-sdl3.sh
docker/proot-build/: README.md  build-android.sh  build-sysroot.sh  prepare-source.sh
docker/rsync-build/: README.md  build-rsync.sh
docs/: README.md  android-hosted-llvm-toolchain-analysis.md  clang-android-exec-fix.md  clangd-completion-fast-path.md  documentation-status.md  game-engine-plugin-sdl.md  i18n.md  linux-distro-self-hosted-runtime.md  plugin-api-contract.md  proguard-rules-reference.md  project-conventions.md  toolchain-build-guide.md  开发指南.md  快速开始.md  架构概览.md  模块功能说明.md
docs/design/: Completion-Performance-Analysis.md  Editor-Completion-System-Design.md  Editor-Theme-Customization-Design.md  LSP-Snippet-Placeholder-Handling.md  MobileEditor-Highlight-Pipeline-Review.md  MobileIDE-Design-System.md  PRoot-Feature-Analysis.md  README.md  UI-Components-Style-Guide.md  smart-wrap-implementation.md  unified-layout-snapshot.md
docs/guides/: Branch-Management-Guide.md  File-Viewer-Guide.md  PC-LSP-Proxy-Setup-Guide.md  Remote-LSP-Guide.md
docs/planning/: Architecture-Optimization-Tasks.md  Feature-Roadmap.md  README.md
docs/plugins/: LSP-Plugin-Development-Guide.md  Plugin-API-Guide.md  Plugin-Authoring-Tutorial.md  Plugin-Marketplace-Troubleshooting.md  Plugin-Project-Template-Wizard-Troubleshooting.md  Plugin-Roadmap.md  Plugin-State-Model.md  Plugin-Template-Design.md  Plugin-Tutorial-Acceptance-Checklist.md  Plugin-Tutorial-Maintenance-Log.md  README.md
docs/registry/: GitHub-Registry.md
docs/testing/: README.md
docs/troubleshooting/: LSP-CLEARTEXT-ERROR.md  native-cmake-linker64-ninja.md
feature/ai/: build.gradle.kts
feature/editor/: build.gradle.kts
feature/help/: build.gradle.kts
feature/output/: build.gradle.kts
keystore/: README.md
scripts/: build-and-package-android-toolchain.sh  build-android-tools.sh  repack-toolchain-from-existing-package.sh
server/: README.md
test-plugins/: mobileide.template.sdl3.mobileplug  test-dark-theme.mobileplug  test-script-tools.mobileplug  test-snippets.mobileplug
tools/: build-apk.ps1  check-apk-contents.ps1  device-native-smoke.ps1  monitor-toolchain-progress.ps1  sync-mobile-toolchain-assets.ps1  verify-mobile-toolchain-package.ps1
(+1631 files in other folders)
